gifsApp terminada creacion servicio, consumo de la api giphy con peticiones, historial en localStorage06Dic/2021

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,7 +5,8 @@
   <hr class="text-white">
 
   <div class="list-group list-reset mx-2">
-    <a href="#" class="list-group-item list-group-item-action">Dashboard</a>
+    <a href="#" class="list-group-item list-group-item-action" (click)="buscar(item)"
+        *ngFor="let item of historial">{{ item | titlecase }}</a>
   </div>
 </div>
 <!-- end sidebar -->
